dnl Process this file with autoconf to produce a configure script.
AC_INIT(rx.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_C_CONST

AC_STDC_HEADERS

opt_objs=
opt_cflags=
if test -d ../libsystas ; then
  opt_objs=rgx.o
  opt_cflags="-I$srcdir/../libsystas -I../libsystas -DRX_WANT_RX_DEFS"
fi

AC_SUBST(opt_objs)
AC_SUBST(opt_cflags)

AC_OUTPUT(Makefile)
